--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,7 @@
     <string name="waiting_for_flow_of_data">Waiting for flow of data</string>
     <string name="collect">Collect</string>
     <string name="waiting_for_coroutines_data">Waiting for coroutines data</string>
+    <string name="take_photo">Take Photo</string>
+    <string name="start_capture">Start Capture</string>
+    <string name="stop_capture">Stop Capture</string>
 </resources>
